# CardioLens

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  Makefile.web  README.md  pyproject.toml  render.yaml  requirements.txt
api/: main.py  requirements.txt
data/: README.md
docs/: DEPLOYMENT.md  KICKOFF.md  WEBSITE_PLAN.md
frontend/: .env.local.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
notebooks/: Heart_Attack_Classification_original.ipynb
reports/: calibration_report.md  clinical_reporting_checklist.md  cv_results.json  data_card.md  data_source_research.md  data_strategy.md  decision_curve_report.md  error_analysis.md  explainability_report.md  external_feature_availability.md  external_validation_metrics.csv  external_validation_report.md  feature_importance.csv  learning_curve_report.md  metrics.json  model_card.md  nested_cv_report.md  nested_cv_results.csv  phase0_approval_checklist.md  phase1_completion_report.md  phase2_completion_report.md  phase3_completion_report.md  phase4_completion_report.md  phase5_completion_report.md  sample_patient_report.md  subgroup_metrics.csv  subgroup_report.md  threshold_metrics.csv  threshold_report.md  threshold_selection_train_oof.csv  threshold_test_evaluation.csv  uncertainty_metrics.json  uncertainty_report.md
scripts/: export_reports_summary.py
src/: __init__.py  _shared.py  calibration_report.py  config.py  data.py  dataset_registry.py  decision_curve.py  error_analysis.py  evaluate.py  explain.py  external_data.py  external_validation.py  (+10 more)
(+56 files in other folders)
